--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsbarcode": "^3.11.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
