Add barcode scripts, printLabels script, and update .gitignore

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bwip-js": "^4.5.1",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "jsbarcode": "^3.11.6",
+    "pdfkit": "^0.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-barcode-scanner": "^2.0.0",
