Updated UI, added logo & loading screen, bug fixes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
+    "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "bwip-js": "^4.5.1",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "framer-motion": "^12.0.6",
     "jsbarcode": "^3.11.6",
     "pdfkit": "^0.16.0",
     "react": "^18.3.1",
