--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zxing/browser": "^0.1.5",
     "bwip-js": "^4.5.1",
@@ -48,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+},
+"devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jest": "^27.5.1"
   }
 }
